# machineid-cli

./: Cargo.toml  README.md
.github/workflows/: build_and_release.yml
src/: main.rs
